--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,5 +1,5 @@
 <section class="cart-show">
-
+<% if !enhanced_cart.empty? %>
   <header class="page-header">
     <h1>My Cart</h1>
   </header>
@@ -48,5 +48,9 @@
       <% end %>
     </div>
   </div>
+
+  <% else %>
+  <p>Your cart is empty. Please return to <%= link_to 'the main page', :root %>. </p>
+  <% end %>
 
 </section>
